// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing CredentialsList component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
    data-testid="box-credentials-list"
  >
    <h6
      class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      data-testid="typography-credentials-list-title"
    >
      Main group
    </h6>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-label="grid"
        aria-readonly="true"
        class="ReactVirtualized__Grid ReactVirtualized__List"
        role="grid"
        style="box-sizing: border-box; direction: ltr; height: -8px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto; outline: none;"
        tabindex="-1"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="button-new-credential"
        href="/front/new_credential"
        title="Create credential"
      >
        <img
          alt="Create credential"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`testing CredentialsList component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
    data-testid="box-credentials-list"
  >
    <h6
      class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      data-testid="typography-credentials-list-title"
    >
      Grupo principal
    </h6>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-label="grid"
        aria-readonly="true"
        class="ReactVirtualized__Grid ReactVirtualized__List"
        role="grid"
        style="box-sizing: border-box; direction: ltr; height: -8px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto; outline: none;"
        tabindex="-1"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="button-new-credential"
        href="/front/new_credential"
        title="Criar credencial"
      >
        <img
          alt="Criar credencial"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`testing CredentialsList component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
    data-testid="box-credentials-list"
  >
    <h6
      class="MuiTypography-root Component-root Component-root MuiTypography-h6"
      data-testid="typography-credentials-list-title"
    >
      Grupo principal
    </h6>
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-label="grid"
        aria-readonly="true"
        class="ReactVirtualized__Grid ReactVirtualized__List"
        role="grid"
        style="box-sizing: border-box; direction: ltr; height: -8px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto; outline: none;"
        tabindex="-1"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root Component-root Component-root mui-fixed"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root MuiTypography-colorPrimary"
        data-testid="button-new-credential"
        href="/front/new_credential"
        title="Crear credencial"
      >
        <img
          alt="Crear credencial"
          class="img-root img-root"
          src=""
        />
      </a>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;
